--- a/style.css
+++ b/style.css
@@ -225,23 +225,29 @@ body{
     margin-left: 6%;
     width: 60%;
     box-shadow: 5px 2px 10px 2px rgba(0, 0, 0, 0.439);
+    margin-top: 30px;
 }
 .tittle{
-    font-size: 30px;
-    margin-left: 25%;
+    font-size: 25px;
+    margin-left: 34%;
+    font-family: 'Roboto', sans-serif;
+
 }
 .logout-h3{
     color: white; cursor: pointer; font-size: 22px; margin-left: 70%;
     margin-top: 15px;
+    font-family: 'Roboto', sans-serif;
 }
 .blog-name{
     text-align: center;
-    font-size: 40px;
+    font-size: 35px;
+    font-family: 'Roboto', sans-serif;
 }
 .blog-description{
     font-size: 30px;
-    margin-left: 20%;
+    margin-left: 25%;
     font-weight: bolder;
+    font-family: 'Roboto', sans-serif;
 }
 .editbtn{
     outline: none;
@@ -251,7 +257,7 @@ body{
     color: white;
     height: 33px;
     font-size: 18px;
-    margin-left: 15%;
+    margin-left: 25%;
     cursor: pointer;
     border-radius: 5px;
     margin-bottom: 20px;
@@ -289,10 +295,11 @@ textarea {
     width: 60px;
 }
 #user-info{
-    box-shadow: 5px 10px 5px 1px black;
-    border: 1px solid black;
+    box-shadow: 1px 5px 15px 0px black;
+    border: 0px solid black;
     width: 70%;
     margin-left: 10%;
+    height: 60vh;
 }
 #user-info>input{
     margin-left: 25%;
@@ -315,4 +322,18 @@ textarea {
     cursor: pointer;
     border-radius: 5px;
     margin-bottom: 20px;
+}
+h2{
+    margin-top: 20px;
+    background-color: rgb(45, 132, 132);
+    color: #f7f7f7;
+    /* font-size: 10px; */
+    height: 50px;
+}
+.blog-img{
+    width: 150px;
+    border-radius: 50%;
+    margin-left: 1%;
+    position: absolute;
+    height: 140px;
 }
